--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         
-        <img id="header-image" src="./images/paris.jpg" alt="">
-        <nav>
+        <img id="header-image" src="./images/ocean.jpg" alt="">
+        <nav id="main-nav">
             <a href="./index.html">Home</a>
             <a href="./stories.html">Stories</a>
             <a href="./contact.html">Contact Me</a>
