--- a/stories.html
+++ b/stories.html
@@ -13,34 +13,34 @@
 
     <section>
         <h1>Welcome To My Travel Page</h1>
-        <blockquote>'A wise man once said nothing.'</blockquote>
+        <blockquote>'It feels good to be lost in the right direction.' -unknown</blockquote>
     </section>
 
     <div>
-        <img src="./images/paris.jpg" alt="">
+        <img src="./images/japan.jpg" alt="">
         <h2>Japan</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae culpa nesciunt veniam possimus earum id fugiat maxime eius iusto, nobis ipsa explicabo hic optio, officia perspiciatis! Magni modi porro expedita.</p>
     </div>
 
     <div>
-        <img src="./images/paris.jpg" alt="">
+        <img src="./images/nepal.jpg" alt="">
         <h2>Nepal</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae culpa nesciunt veniam possimus earum id fugiat maxime eius iusto, nobis ipsa explicabo hic optio, officia perspiciatis! Magni modi porro expedita.</p>
     </div>
 
     <div>
-        <img src="./images/paris.jpg" alt="">
+        <img src="./images/bali.jpg" alt="">
         <h2>Bali</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae culpa nesciunt veniam possimus earum id fugiat maxime eius iusto, nobis ipsa explicabo hic optio, officia perspiciatis! Magni modi porro expedita.</p>
     </div>
 
     <div>
-        <img src="./images/paris.jpg" alt="">
+        <img src="./images/mongolia.jpg" alt="">
         <h2>Mongolia</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae culpa nesciunt veniam possimus earum id fugiat maxime eius iusto, nobis ipsa explicabo hic optio, officia perspiciatis! Magni modi porro expedita.</p>
     </div>
     <div>
-        <img src="./images/paris.jpg" alt="">
+        <img src="./images/costa-rica.jpg" alt="">
         <h2>Costa Rica</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae culpa nesciunt veniam possimus earum id fugiat maxime eius iusto, nobis ipsa explicabo hic optio, officia perspiciatis! Magni modi porro expedita.</p>
     </div>
